--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
 	});
 </script>
 
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(101124300); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101124300ns.gif" /></p></noscript>
+
 </body>
 </html>
