--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html style="height: 90%; margin: 16px">
+<html style="height: 92%; margin: 16px">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<link rel="stylesheet" data-name="vs/editor/editor.main" href="https://microsoft.github.io/monaco-editor/node_modules/monaco-editor/min/vs/editor/editor.main.css">
 	<title>That's alot of YAML</title> 
 </head>
-<body style="height: 90%; margin: 16px">
+<body style="height: 92%; margin: 16px">
 
 <div id="container" style="min-height: 100%"></div>
 
@@ -30,12 +30,15 @@
 			'#',
 			'# "We replaced 1,000 lines with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
+			'\n',
 			'No:',
 			'\tBody:',
 			'\t\tWants:',
 			'\t\t\tTo:',
 			'\t\t\t\tWrite:',
 			'\t\t\t\t\t- YAML',
+			'\n',
+			'# Made with love by https://twitter.com/geoffreyhuntley, pull-requests welcome.'
 		].join('\n'),
 		language: 'yaml',
 		fontSize: 18,
@@ -47,10 +50,6 @@
 		}
 	});
 </script>
-
-<script src="//static.getclicky.com/js" type="text/javascript"></script>
-<script type="text/javascript">try{ clicky.init(101124300); }catch(e){}</script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101124300ns.gif" /></p></noscript>
 
 </body>
 </html>
