--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		value: [
 		'# YAML features include:',
 			'#',
-			'# - 100% test coverage, compiles just fine, with no errors or warnings, always shippable',
+			'# - 100% test coverage, always compiles just fine with no errors or warnings, always shippable',
 			'# - no enforced error handling during development because runtime "panic at the disco" in production is dope',
 			'# - stack traces with line numbers are overrated, "something broke" is way better',
 			'# - is marginally better than windows.ini',
