--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 			'# - 100% test coverage, always compiles just fine with no errors or warnings, always shippable',
 			'# - no enforced error handling during development because runtime "panic at the disco" in production is dope',
 			'# - "something broke" is way better, stack traces with line numbers are overrated',
-			'# - is marginally better than windows.ini',
 			'# - a great way to burn an entire day when setting up a new CI pipeline',
+			'# - marginally better than windows.ini',
+			'# - industry adoption, is the standardized format of kubernetes',
 			'# - unlike json, YAML supports comments',
 			'#',
 			'# "We replaced 1,000 lines with 10 structs and people started contributing again"',
