--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			'# - "something broke" is way better, stack traces with line numbers are overrated',
 			'# - a great way to burn an entire day when setting up a new CI pipeline',
 			'# - marginally better than windows.ini',
-			'# - unquestionable industry adoption, "used by kubernetes',
+			'# - unquestionable industry adoption, "used by kubernetes"',
 			'# - unlike json, YAML supports comments',
 			'#',
 			'# "We replaced 1,000 lines with 10 structs and people started contributing again"',
