--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			'\t\t\t\tWrite:',
 			'\t\t\t\t\t- YAML',
 			'\n',
-			'# Made with love by https://twitter.com/geoffreyhuntley, pull-requests welcome.'
+			'# Made with love by https://twitter.com/geoffreyhuntley, pull-requests containing shade welcome.'
 		].join('\n'),
 		language: 'yaml',
 		fontSize: 18,
