--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 			'\t\t\t\tWrite:',
 			'\t\t\t\t\t- YAML',
 			'\n',
-			'# Made with love by https://twitter.com/geoffreyhuntley, pull-requests containing shade welcome.'
+			'# Made with love by https://twitter.com/geoffreyhuntley',
+			'# Shade welcome, mash the octocat button and share how YAML makes your life better'
 		].join('\n'),
 		language: 'yaml',
 		fontSize: 18,
