--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			'\t\t\t\t\t- YAML',
 			'\n',
 			'# Made with love by https://twitter.com/geoffreyhuntley',
-			'# Shade welcome, mash the octocat button at ↗️ and share how', 
+			'# Shade welcome, mash the ↗️ octocat button ↗️ and share how', 
 			'# YAML makes your life better 💖'
 		].join('\n'),
 		language: 'yaml',
