--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 			'# - no enforced error handling during development because runtime "panic at the disco" in production is dope',
 			'# - "something broke" is way better, stack traces with line numbers are overrated',
 			'# - a great way to burn an entire day when setting up a new CI pipeline',
-			'# - marginally better than windows.ini',
+			'# - is marginally better than windows.ini',
 			'# - unquestionable industry adoption, "used by kubernetes"',
 			'# - unlike json, YAML supports comments',
+			'#',
+			'# Mandatory reading:',
 			'#',
 			'# "We replaced 1,000 lines with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
