--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			'#',
 			'# Mandatory reading:',
 			'#',
-			'# "We replaced 1,000 lines with 10 structs and people started contributing again"',
+			'# "We replaced 1,000 lines [of YAML] with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
 			'\n',
 			'No:',
@@ -42,9 +42,9 @@
 			'\t\t\t\tWrite:',
 			'\t\t\t\t\t- YAML',
 			'\n',
-			'# Made with love by https://twitter.com/geoffreyhuntley',
+			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
 			'# Shade welcome, mash the ↗️ octocat button ↗️ and share how', 
-			'# YAML makes your life better 💖'
+			'# YAML makes your life better.'
 		].join('\n'),
 		language: 'yaml',
 		fontSize: 14,
