--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			'#',
 			'# Mandatory reading:',
 			'#',
-			'# "We replaced 1,000 lines [of YAML] with 10 structs and people started contributing again"',
+			'# "We replaced 1,000 lines of YAML with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
 			'\n',
 			'No:',
