--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			'# - 100% test coverage, always compiles just fine with no errors or warnings, always shippable',
 			'# - no enforced error handling during development because runtime "panic at the disco" in production is dope',
 			'# - "something broke" is way better, stack traces with line numbers are overrated',
-			'# - a great way to burn an entire day when setting up a new CI pipeline',
+			'# - a great way to burn hours when setting up a new CI pipeline',
 			'# - is marginally better than windows.ini',
 			'# - unquestionable industry adoption, "used by kubernetes"',
 			'# - unlike json, YAML supports comments',
