--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
 	var editor = monaco.editor.create(document.getElementById('container'), {
 		value: [
-		'# 🤔 Why YAML is the right technology for you 🤔',
+		        '# 🤔 Why YAML is the right technology for you 🤔',
 			'#',
 			'# - 100% test coverage, always compiles just fine with no errors or warnings, always shippable',
 			'# - no enforced error handling during development because runtime "panic at the disco" in production is dope',
@@ -43,7 +43,7 @@
 			'\t\t\t\t\t- YAML',
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
-			'# Shade welcome, mash the ↗️ octocat button ↗️ and share how', 
+			'# Shade welcome, mash the ↗️ octocat ↗️ and share how', 
 			'# YAML makes your life better.'
 		].join('\n'),
 		language: 'yaml',
