--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 			'# - unquestionable industry adoption, "used by kubernetes"',
 			'# - unlike json, YAML supports comments',
 			'#',
-			'# Mandatory reading:',
-			'#',
+			'# 📢 Mandatory reading 📢',
 			'# "We replaced 1,000 lines of YAML with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
 			'\n',
