--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 			'#',
 			'# "We replaced 1,000 lines of YAML with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
+			'#',
+			'# "What if you used the same language and tools you use to define your application to define your infrastructure?"',
+			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈",
 			'\n',
 			'No:',
 			'\tBody:',
