--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<link rel="stylesheet" data-name="vs/editor/editor.main" href="https://microsoft.github.io/monaco-editor/node_modules/monaco-editor/min/vs/editor/editor.main.css">
-	<title>That's alot of YAML</title> 
+	<title>That's alot of YAML.</title> 
 </head>
 <body style="height: 96%; margin: 16px">
 
@@ -46,7 +46,7 @@
 			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈',
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
-			'# Shade welcome, mash the ↗️ octocat ↗️ and share how', 
+			'# Improvements welcome, mash the ↗️ octocat ↗️ and share how', 
 			'# YAML makes your life better.'
 		].join('\n'),
 		language: 'yaml',
