--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			'# "We replaced 1,000 lines of YAML with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
 			'#',
-			'# "What if you used the same language and tools you use to define your application to define your infrastructure?"',
+			'# "What if you used the same language and tools you use to define your app to define your infrastructure?"',
 			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈',
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
