--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 			'# - 100% test coverage, always compiles just fine with no errors or warnings, always shippable',
 			'# - no enforced error handling during development because runtime "panic at the disco" in production is dope',
 			'# - "something broke" is way better than stack traces with line numbers',
-			'# - a great way to burn hours when setting up a new CI pipeline',
+			'# - you need to burn hours as part of setting up a new CI pipeline',
+			'# - safe choice with unquestionable industry adoption, "used by kubernetes"',
 			'# - is marginally better than windows.ini',
-			'# - unquestionable industry adoption, "used by kubernetes"',
 			'# - unlike json, YAML supports comments',
 			'\n',
 			'# 📢 Mandatory reading 📢',
