--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈',
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
-			'# Improvements welcome, mash the ↗️ Octocat ↗️ and share how', 
-			'# YAML makes your life better.'
+			'# Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.'
 		].join('\n'),
 		language: 'yaml',
 		fontSize: 13,
