--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 			'\n',
 			'# 📢 Mandatory reading 📢',
 			'#',
+			'# "Today we’re going to look at some general problems with the YAML format"',
+			'# 👉 https://arp242.net/weblog/yaml_probably_not_so_great_after_all.html 👈,
+			'#',
 			'# "We replaced 1,000 lines of YAML with 10 structs and people started contributing again"',
 			'# 👉 https://tinyurl.com/lessons-in-over-engineering 👈',
 			'#',
