--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 			'# - is marginally better than windows.ini',
 			'# - unlike json, YAML supports comments',
 			'\n',
+      '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway. 🚨',
+      'NI: Nicaragua',
+      'NL: Netherlands',
+      'NO: Norway # 💣!',
+      '# `NO` is parsed as a boolean type, which with the YAML 1.1 spec, there are 22 options to write "true" or "false."',
+      '# You have wrap "NO" in quotes to get the expected result.',
+			'\n',
 			'# 📢 Mandatory reading 📢',
 			'#',
 			'# "We replaced 1,000 lines of YAML with 10 structs and people started contributing again"',
@@ -44,6 +51,9 @@
 			'#',
 			'# "What if you used the same language and tools you use to define your app to define your infrastructure?"',
 			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈',
+			'#',
+			'# "Today we\’re going to look at some general problems with the YAML format"',
+			'# 👉 https://arp242.net/weblog/yaml_probably_not_so_great_after_all.html 👈',
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
 			'# Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.'
