--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			'# - is marginally better than windows.ini',
 			'# - unlike json, YAML supports comments',
 			'\n',
- 		        '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway. 🚨',
+ 		        '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway 🚨',
 		        '# `NO` is parsed as a boolean type, which with the YAML 1.1 spec, there are 22 options to write "true" or "false."',
 		        '# You have wrap "NO" in quotes to get the expected result.',
 		        'NI: Nicaragua',
