Add link to @colmmacc's story about negative GPS coordinates

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 			'#',
 			'# "What if you used the same language and tools you use to define your app to define your infrastructure?"',
 			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈',
+			'#',
+			'# "the bug was that the YAML parser ignored the negative signs ... so negative GPS coordinates became positive ones"',
+			'# 👉 https://twitter.com/colmmacc/status/1063470541464461312 👈',
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
 			'# Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.'
