--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 			'# "What if you used the same language and tools you use to define your app to define your infrastructure?"',
 			'# 👉 https://twitter.com/ellism/status/1008728148131733504 👈',
 			'#',
+			'# "A YAML file is almost always still \'valid\' even if it is trunca"',
+			'# 👉 https://twitter.com/colmmacc/status/1057316977457324032 👈',
+			'#',
 			'# "the bug was that the YAML parser ignored the negative signs ... so negative GPS coordinates became positive ones"',
 			'# 👉 https://twitter.com/colmmacc/status/1063470541464461312 👈',
 			'\n',
