--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			'\n',
  		        '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway 🚨',
 		        '# `NO` is parsed as a boolean type, which with the YAML 1.1 spec, there are 22 options to write "true" or "false."',
-		        '# You have wrap "NO" in quotes to get the expected result.',
+		        '# You have to wrap "NO" in quotes to get the expected result.',
 		        'NI: Nicaragua',
 		        'NL: Netherlands',
 		        'NO: Norway # 💣!',
