Added a comment about YAML/json commenst

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			'# - you need to burn hours as part of setting up a new CI pipeline',
 			'# - safe choice with unquestionable industry adoption, "used by kubernetes"',
 			'# - is marginally better than windows.ini',
-			'# - unlike json, YAML supports comments',
+			'# - unlike json, YAML supports true comments  (in json, you can always write `{"$comment_1$": "A way to use comments in json"}`)',
 			'\n',
  		        '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway 🚨',
 		        '# `NO` is parsed as a boolean type, which with the YAML 1.1 spec, there are 22 options to write "true" or "false."',
