--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			'# - you need to burn hours as part of setting up a new CI pipeline',
 			'# - safe choice with unquestionable industry adoption, "used by kubernetes"',
 			'# - is marginally better than windows.ini',
+			'# - you need to "execute this code"
 			'# - unlike json, YAML supports comments',
 			'\n',
  		        '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway 🚨',
@@ -61,6 +62,13 @@
 			'#',
 			'# "the bug was that the YAML parser ignored the negative signs ... so negative GPS coordinates became positive ones"',
 			'# 👉 https://twitter.com/colmmacc/status/1063470541464461312 👈',
+			'#',
+			'# wait a sec, did you say "executable yaml??": 🍿"',
+			'# - https://ruby-doc.org/stdlib-2.4.0/libdoc/yaml/rdoc/YAML.html#module-YAML-label-Security',
+			'# - https://www.php.net/manual/en/function.yaml-parse.php#refsect1-function.yaml-parse-notes',
+			'# - https://lgtm.com/blog/swagger_snakeyaml_CVE-2017-1000207_CVE-2017-1000208',
+			'# - https://github.com/yaml/pyyaml/wiki/PyYAML-yaml.load(input)-Deprecation',
+			'# 
 			'\n',
 			'# Made with 💖 by https://twitter.com/geoffreyhuntley',
 			'# Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.'
