--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			'# - you need to burn hours as part of setting up a new CI pipeline',
 			'# - safe choice with unquestionable industry adoption, "used by kubernetes"',
 			'# - is marginally better than windows.ini',
-			'# - you need to "execute this code"
+			'# - you need to "execute this code",
 			'# - unlike json, YAML supports comments',
 			'\n',
  		        '# 🚨 Anyone who uses YAML long enough will eventually get burned when attempting to abbreviate Norway 🚨',
