--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ No:
 # - you need to burn hours as part of setting up a new CI pipeline
 # - safe choice with unquestionable industry adoption, "used by kubernetes"
 # - is marginally better than windows.ini
-# - unlike json [1], YAML supports true comments
+# - unlike json [1], YAML supports comments
 # - you need a super safe way to "execute this code"
 
 # 🍿 wait a sec, did you say "executable yaml"?? 🍿
