--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ NO: Norway # 💣!
 # 👉 https://twitter.com/colmmacc/status/1063470541464461312 👈
 #
 
-# Made with 💖 by https://twitter.com/geoffreyhuntley
+# Made with 💖 by https://twitter.com/geoffreyhuntley after one too many CustomResourceDefinitions
 # Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.
   
 # [1] You can do comments in json by `{"$comment_1$": "A way to use comments in json"}` but it's icky.
