--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 <body style="height: calc(100% - 75px); margin: 35px 0 0 0;">
 
 <div id="container" style="height: 100%" class="nojs">
+# Made with 💖 by https://twitter.com/geoffreyhuntley after one too many CustomResourceDefinitions
+# Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.
+
 No:
 	Body:
 		Wants:
 			To:
 				Write:
 					- YAML
-
 
 # 🤔 Why YAML is the right technology for you 🤔
 #
@@ -67,9 +69,12 @@ NO: Norway # 💣!
 # 👉 https://twitter.com/colmmacc/status/1063470541464461312 👈
 #
 
-# Made with 💖 by https://twitter.com/geoffreyhuntley after one too many CustomResourceDefinitions
-# Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.
-  
+# 💭 Alternative options and approaches to DevOps (cough yamlops cough) 💭
+- https://dhall-lang.org/
+- https://www.youtube.com/watch?v=tl9I-R83lKo
+- https://github.com/xtruder/kubenix
+
+# 📖 Footnotes 📖
 # [1] You can do comments in json by `{"$comment_1$": "A way to use comments in json"}` but it's icky.
 </div>
 
