--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ No:
 				Write:
 					- YAML
 
-# 🤔 Why YAML is the right technology for you 🤔
+# 🤔 Why YAML is the right devops technology for you 🤔
 #
 # - 100% test coverage, always compiles just fine with no errors or warnings, always shippable
 # - no enforced error handling during development because runtime "panic at the disco" in production is dope
