--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ NO: Norway # 💣!
 # - https://www.youtube.com/watch?v=tl9I-R83lKo
 # - https://github.com/xtruder/kubenix/tree/kubenix-2.0/examples/nginx-deployment
 
-# 🏁 If you are vendor of developer tooling that is configurable with YAML, please do this 🏁
+# 🏁 If you are vendor of developer tooling that is configurable via YAML, please do this 🏁
 # - https://twitter.com/kzu/status/1163864030911578112
 	
 # 📖 Footnotes 📖
