--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ NO: Norway # 💣!
 # "the bug was that the YAML parser ignored the negative signs ... so negative GPS coordinates became positive ones"
 # 👉 https://twitter.com/colmmacc/status/1063470541464461312 👈
 #
-
+# "Every YAML parser is a custom YAML parser"
+# 👉 https://matrix.yaml.io/valid.html 👈
+	
 # 💭 Alternative options and approaches to DevOps (cough yamlops cough) 💭
 # - https://dhall-lang.org/
 # - https://www.youtube.com/watch?v=tl9I-R83lKo
