Added link to SO question about multi-line strings

--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@ NO: Norway # 💣!
 #
 # "Every YAML parser is a custom YAML parser"
 # 👉 https://matrix.yaml.io/valid.html 👈
-	
+#
+# "There are 63 different ways to write multi-line strings in YAML"
+# 👉 https://stackoverflow.com/a/21699210/1094085 👈
+
 # 💭 Alternative options and approaches to DevOps (cough yamlops cough) 💭
 # - https://dhall-lang.org/
 # - https://www.youtube.com/watch?v=tl9I-R83lKo
@@ -78,7 +81,7 @@ NO: Norway # 💣!
 
 # 🏁 If you are vendor of developer tooling that is configurable via YAML, please do this 🏁
 # - https://twitter.com/kzu/status/1163864030911578112
-	
+
 # 📖 Footnotes 📖
 # [1] You can do comments in json by `{"$comment_1$": "A way to use comments in json"}` but it's icky.
 </div>
