--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ No:
 			To:
 				Write:
 					- YAML
-
+	
 # 🤔 Why YAML is the right devops technology for you 🤔
 #
 # - 100% test coverage, always compiles just fine with no errors or warnings, always shippable
@@ -50,6 +50,27 @@ No:
 NI: Nicaragua
 NL: Netherlands
 NO: Norway # 💣!
+
+# 😭 If SQL were built on YAML 😭
+
+SELECT:
+- num
+- name
+FROM:
+- customers
+WHERE EXISTS:
+  SELECT:
+  - name
+  FROM:
+  - orders
+  WHERE:
+    AND:
+    - EQUALS:
+      - customers.num
+      - orders.customer_num
+    - LT:
+      - price
+      - 50	
 
 # 📢 Mandatory reading 📢
 #
