--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@ NI: Nicaragua
 NL: Netherlands
 NO: Norway # 💣!
 
+# YAML knows that, when you have something that looks like the time of day,
+# what you _really_ wanted is the time of milliseconds since midnight
+timeOfDay:
+  whatYouWrote: 04:30 # And when you parse this file and serialize it again, you get ...
+  whatYouSurelyMeant: 16200 # Have fun debugging this one!
+  whatYouShouldHaveWritten: !!str 04:30
+
 # 😭 If SQL were built on YAML 😭
 
 SELECT:
