Suggest less icky way to do comments in JSON

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ WHERE EXISTS:
 # - https://twitter.com/kzu/status/1163864030911578112
 
 # 📖 Footnotes 📖
-# [1] You can do comments in json by `{"$comment_1$": "A way to use comments in json"}` but it's icky.
+# [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
 </div>
 
 <script>var require = { paths: { 'vs': 'https://microsoft.github.io/monaco-editor/node_modules/monaco-editor/min/vs' } };</script>
