--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@ timeOfDay:
   whatYouSurelyMeant: 16200 # Have fun debugging this one!
   whatYouShouldHaveWritten: !!str 04:30
 
+# YAML is the super best way to encode Octal (tm) and learning the hard way that Kubernetes uses YAML 1.1
+# is a DevOps right of passage. Below YAML 1.2 a large integer is automatically converted to octal.
+- YAML 1.1 uses `0666` notation.
+- YAML 1.2 uses `0o666` notation
+	
 # 😭 If SQL were built on YAML 😭
 
 SELECT:
