--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@ timeOfDay:
 - YAML 1.1 uses `0666` notation.
 - YAML 1.2 uses `0o666` notation
 	
+# 🤢 I have recently been learning GitHub Actions
+#
+# I just made 8 commits/pushes in one hour, and the last commit message, in its entirety, was:
+#
+# "I don't really like yml"
+- https://twitter.com/eric_sink/status/1430954572848287744
+
 # 😭 If SQL were built on YAML 😭
 
 SELECT:
