--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@ jobs:
 	- step2:
 	  - run: "execute-script-for-job1-inside-step2"
 
+# 💊 Mega twitter thread of pain
+
+# 👉 https://twitter.com/brunoborges/status/1098472238469111808	👈
+
 # 📢 Mandatory reading 📢
 #
 # "Today we’re going to look at some general problems with the YAML format"
