fuck yaml - https://twitter.com/leppie/status/1436465514562428948

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@ WHERE EXISTS:
       - price
       - 50	
 
+# "Don't forget the extra line break otherwise all shit goes to hell"
+# 👉 https://github.com/IronScheme/IronScheme/commit/2f847793946935bd9143cdfb064f9006f763df68
+
 # 🤡 Doing the same thing with different CI providers 🤡
 
 # Azure devops
