--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@ jobs:
 
 # 📖 Footnotes 📖
 # [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
+
+# 💕 Website reviews - By design, this website is as usable as YAML 💕
+- I need to burn the very motherboard this site runs from. It’s that awful.
+- This is the worst website I've ever seen
+- Wtf is this website and why does it repeatedly pop up my phone's keyboard
+	- This Website is a giant editable textfield
+		- Why?!?
+			- Because it’s a good idea to demonstrate good standards while standing on one’s soapbox
+			- The author of THAT website wants to tell the rest of us how to program.
+- While I agree with the spirit of the website (fuck yaml), the design decisions of the author are questionable to say the least.
+- The good news (I realised) was that you can select all the text of the site, and then delete it. Problem solved.
+- Fuck this website. Maybe if this person stopped bitching about yaml their website wouldn't blow.
+- Yeah, I’m not going to take advice on best practices from a guy whose website is a giant editable text field with unclickable hyperlinks.
+
+
+
+
+
 </div>
 
 <script>var require = { paths: { 'vs': 'https://microsoft.github.io/monaco-editor/node_modules/monaco-editor/min/vs' } };</script>
