--- a/index.html
+++ b/index.html
@@ -161,9 +161,10 @@ jobs:
 # 📖 Footnotes 📖
 # [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
 
-# 💕 Website reviews - By design, this website is as usable as YAML 💕
+# Here's some ⭐️⭐️⭐️⭐️⭐️ website reviews:
 - I need to burn the very motherboard this site runs from. It’s that awful.
 - This is the worst website I've ever seen
+- I agree with the author in principle but that website is inexcusable. I'm going to add YAML config to my projects on Monday just to spite that horrific "website".
 - Wtf is this website and why does it repeatedly pop up my phone's keyboard
 	- This Website is a giant editable textfield
 		- Why?!?
@@ -173,6 +174,8 @@ jobs:
 - The good news (I realised) was that you can select all the text of the site, and then delete it. Problem solved.
 - Fuck this website. Maybe if this person stopped bitching about yaml their website wouldn't blow.
 - Yeah, I’m not going to take advice on best practices from a guy whose website is a giant editable text field with unclickable hyperlinks.
+
+# ps. 💕 By design, this website is as usable as YAML 
 
 
 
