--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ jobs:
 # 📖 Footnotes 📖
 # [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
 
-# Here's some ⭐️⭐️⭐️⭐️⭐️ website reviews:
+# ps. By design, this website is as usable as YAML 💕  
 - I need to burn the very motherboard this site runs from. It’s that awful.
 - This is the worst website I've ever seen
 - I agree with the author in principle but that website is inexcusable. I'm going to add YAML config to my projects on Monday just to spite that horrific "website".
@@ -169,13 +169,11 @@ jobs:
 	- This Website is a giant editable textfield
 		- Why?!?
 			- Because it’s a good idea to demonstrate good standards while standing on one’s soapbox
-			- The author of THAT website wants to tell the rest of us how to program.
+				- The author of THAT website wants to tell the rest of us how to program.
 - While I agree with the spirit of the website (fuck yaml), the design decisions of the author are questionable to say the least.
 - The good news (I realised) was that you can select all the text of the site, and then delete it. Problem solved.
 - Fuck this website. Maybe if this person stopped bitching about yaml their website wouldn't blow.
 - Yeah, I’m not going to take advice on best practices from a guy whose website is a giant editable text field with unclickable hyperlinks.
-
-# ps. 💕 By design, this website is as usable as YAML 
 
 
 
