--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ jobs:
 # 📖 Footnotes 📖
 # [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
 
-# and finaklly, here's some ⭐️⭐️⭐️⭐️⭐️ feedback on this website from reddit.com:
+# and finally, here's some ⭐️⭐️⭐️⭐️⭐️ feedback from reddit.com:
 - I need to burn the very motherboard this site runs from. It’s that awful.
 - This is the worst website I've ever seen
 - I agree with the author in principle but that website is inexcusable. I'm going to add YAML config to my projects on Monday just to spite that horrific "website".
