--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ NL: Netherlands
 NO: Norway # 💣!
 
 # YAML knows that, when you have something that looks like the time of day,
-# what you _really_ wanted is the time of milliseconds since midnight
+# what you _really_ wanted is the time of seconds since midnight
 timeOfDay:
   whatYouWrote: 04:30 # And when you parse this file and serialize it again, you get ...
   whatYouSurelyMeant: 16200 # Have fun debugging this one!
