--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ WHERE EXISTS:
       - price
       - 50	
 
+# him: "Look, I bought a box of DevOps"
+# her: "You can't just buy a box of DevOps"
+# 🤣 https://twitter.com/mike_kaufmann/status/1454712996933025794
+
 # "Don't forget the extra line break otherwise all shit goes to hell"
 # 👉 https://github.com/IronScheme/IronScheme/commit/2f847793946935bd9143cdfb064f9006f763df68
 
