No official docs other than the spec

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ No:
 # - safe choice with unquestionable industry adoption, "used by kubernetes"
 # - is marginally better than windows.ini
 # - unlike json [1], YAML supports comments
+# - no official documentation (other than a specification for implementers) is totally fine
 # - you need a super safe way to "execute this code"
 
 # 🍿 wait a sec, did you say "executable yaml"?? 🍿
