--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body style="height: calc(100% - 75px); margin: 35px 0 0 0;">
 
 <div id="container" style="height: 100%" class="nojs">
-# Made with 💖 by https://twitter.com/geoffreyhuntley after one too many CustomResourceDefinitions
+# Made with 💖 by https://ghuntley.com after one too many CustomResourceDefinitions
 # Improvements welcome, mash the ↗️ Octocat ↗️ and share how YAML makes your life better.
 
 No:
