Added an extra footgun from memory

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@ WHERE EXISTS:
       - price
       - 50	
 
+# Speaking of CI, did you know that 8-character SHAs could be all numbers?
+my:
+	# this will be a string ~98% of the time
+	flaky_version: ${GIT_SHORT_SHA}
+	# this will be a string ~100% of the time
+	string_version: "${GIT_SHORT_SHA}"
+
 # him: "Look, I bought a box of DevOps"
 # her: "You can't just buy a box of DevOps"
 # 🤣 https://twitter.com/mike_kaufmann/status/1454712996933025794
