--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@ NI: Nicaragua
 NL: Netherlands
 NO: Norway # 💣!
 
+# 🚨 Anyone wondering why their first seven Kubernetes clusters deploy just fine, and the eighth fails? 🚨
+- 07
+- 08
+# Results in
+[ 7, "08" ]
+
 # YAML knows that, when you have something that looks like the time of day,
 # what you _really_ wanted is the time of seconds since midnight
 timeOfDay:
