--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@ jobs:
 - The good news (I realised) was that you can select all the text of the site, and then delete it. Problem solved.
 - Fuck this website. Maybe if this person stopped bitching about yaml their website wouldn't blow.
 - Yeah, I’m not going to take advice on best practices from a guy whose website is a giant editable text field with unclickable hyperlinks.
-
+- I think it's cute.
+	
 # ps. By design, this website is as usable as YAML. 💕 
 
 
