--- a/index.html
+++ b/index.html
@@ -187,7 +187,8 @@ jobs:
 
 # 📖 Footnotes 📖
 # [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
-
+# [2] "Does ansible have a json schema? Yaml aint so bad with a schema."?
+	
 # and finally, here's some ⭐️⭐️⭐️⭐️⭐️ feedback from reddit.com:
 - I need to burn the very motherboard this site runs from. It’s that awful.
 - This is the worst website I've ever seen
