lets be serious here

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ No:
 # - you need to burn hours as part of setting up a new CI pipeline
 # - safe choice with unquestionable industry adoption, "used by kubernetes"
 # - is marginally better than windows.ini
-# - unlike json [1], YAML supports comments
+# - unlike json [1][2], YAML supports comments
 # - no official documentation (other than a specification for implementers) is totally fine
 # - you need a super safe way to "execute this code"
 
