--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@ jobs:
 
 \"search(' var=\\\"blue\\\" .
 
+# 🍻 Overhead in a pub
+	
+- The problem with YAML they did one thing well. Shitty boiler plate. Then everyone thought it was a good idea.
+	
 # 💊 Mega twitter thread of pain
 
 # 👉 https://twitter.com/brunoborges/status/1098472238469111808 👈
