--- a/index.html
+++ b/index.html
@@ -174,7 +174,10 @@ jobs:
 #
 # "There are 63 different ways to write multi-line strings in YAML"
 # 👉 https://stackoverflow.com/a/21699210/1094085 👈
-
+#
+# "Toolchain version 1.70 is parsed as 1.7"
+# 👉 https://github.com/dtolnay/rust-toolchain/issues/112 👈
+	
 # 💭 Alternative options and approaches to DevOps (cough yamlops cough) 💭
 # - https://media.ccc.de/v/36c3-11172-leaving_legacy_behind
 # - https://nickel-lang.org/
