--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@ timeOfDay:
 - YAML 1.1 uses `0666` notation.
 - YAML 1.2 uses `0o666` notation
 
+# YAML is great for specifying package versions, as long as you like versions being parsed as floating point.
+versions:
+  foo: 1.7  # These two packages have the same version.
+  bar: 1.70 # These two packages have the same version.
+  fizz: 1.7.0  # But these two packages have different versions.
+  buzz: 1.70.0 # But these two packages have different versions.
+
 # 🤢 I have recently been learning GitHub Actions
 #
 # I just made 8 commits/pushes in one hour, and the last commit message, in its entirety, was:
