--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://microsoft.github.io/monaco-editor/node_modules/monaco-editor/min/vs/editor/editor.main.css">
-    <title>🚨🚨 That's a lot of YAML 🚨🚨</title> 
+    <title>🚨🚨 That's a lot of YAML 🚨🚨</title>
     <style>
         .nojs {
             font-family: monospace;
@@ -151,10 +151,10 @@ jobs:
 
 \"search(' var=\\\"blue\\\" .
 
-# 🍻 Overhead in a pub
-	
+# 🍻 Overheard in a pub
+
 - The problem with YAML they did one thing well. Shitty boiler plate. Then everyone thought it was a good idea.
-	
+
 # 💊 Mega twitter thread of pain
 
 # 👉 https://twitter.com/brunoborges/status/1098472238469111808 👈
@@ -187,7 +187,7 @@ jobs:
 #
 # "StrictYAML Design Justifications"
 # 👉 https://hitchdev.com/strictyaml/why/ 👈
-	
+
 # 💭 Alternative options and approaches to DevOps (cough yamlops cough) 💭
 # - https://media.ccc.de/v/36c3-11172-leaving_legacy_behind
 # - https://nickel-lang.org/
@@ -206,7 +206,7 @@ jobs:
 # [1] You can do comments in json by `{"//": "A way to use comments in json"}` but it's icky.
 # [2] "Does ansible have a json schema? Yaml aint so bad with a schema."?
 # [3] Also see `python2 -c 'print 011' && echo $((011 + 1))`
-	
+
 # and finally, here's some ⭐️⭐️⭐️⭐️⭐️ feedback from reddit.com:
 - I need to burn the very motherboard this site runs from. It’s that awful.
 - This is the worst website I've ever seen
@@ -221,7 +221,7 @@ jobs:
 - Fuck this website. Maybe if this person stopped bitching about yaml their website wouldn't blow.
 - Yeah, I’m not going to take advice on best practices from a guy whose website is a giant editable text field with unclickable hyperlinks.
 
-# ps. By design, this website is as usable as YAML. 💕 
+# ps. By design, this website is as usable as YAML. 💕
 
 
 
