--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ jobs:
                 colorDecorators: false,
                 scrollBeyondLastLine: false,
                 minimap: {
-                    enabled: true
+                    enabled: false
                 },
                 automaticLayout: true
             });
